# sointu

./: CMakeLists.txt
gui/: gui.js  index.html  sointu_client.js  synth.js
server/: CMakeLists.txt  server.asm  server.cpp
sointu-app/: README.md  package-lock.json  package.json  vue.config.js
sointu-app/src/: App.vue  helpers.js  main.js  store.js  units.js
sointu-app/src/components/: Envelope.vue  InstrumentEditor.vue  Keyboard.vue  MainControls.vue  Oscillator.vue  PatternEditor.vue  Slider.vue  TrackEditor.vue  UnitLibrary.vue
src/: introspection.asm  sointu.asm  sointu.inc
templates/amd64-386/: player.asm
tracker/: sequencer.go
vm/: vm.go  vm_test.go
